2009-12-07  Alexey Proskuryakov  <ap@apple.com>

        Don't skip websocket/tests/url-with-credential.html, it's one of earlier tests that is
        to blame.

        * platform/mac/Skipped:

2009-12-07  Brian Weinstein  <bweinstein@apple.com>

        Rubber-stamped by Steve Falkenburg.

        Add one more fast/js test to the Skipped list - also due to:
        https://bugs.webkit.org/show_bug.cgi?id=32228.

        * platform/win/Skipped:

2009-12-07  Nikolas Zimmermann  <nzimmermann@rim.com>

        Not reviewed. Cleaning up Skipped files in order to make more bots green, as I plan to land changes, that affect all bots (svg filters support).

        Remove non-existant animations/3d directory in qt&win Skipped lists.
        Skip one more test on windows (see bug #32228, already in radar, just guessing - not yet sure if it's a random crash issue though)
        Skip 19 (!) tests on the Qt slave, failing since a longer time. Qt developers: Please investigate.

        * platform/qt/Skipped: Also remove some duplicates I spotted.
        * platform/win/Skipped:

2009-12-07  Nikolas Zimmermann  <nzimmermann@rim.com>

        Not reviewed. Disable two flaky SnowLeopard tests, filed bug and notified author.

        Tests "plugins/document-open.html" and "plugins/mouse-events.html" are flaky on SnowLeopard
        https://bugs.webkit.org/show_bug.cgi?id=32229

        * platform/mac-snowleopard/Skipped:

2009-12-07  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        Tests for <rdar://problem/7437820> Weird selection artifacts

        * fast/repaint/block-selection-gap-stale-cache-2.html: Added.
        * fast/repaint/block-selection-gap-stale-cache.html: Added.
        * platform/mac/fast/repaint/block-selection-gap-stale-cache-2-expected.checksum: Added.
        * platform/mac/fast/repaint/block-selection-gap-stale-cache-2-expected.png: Added.
        * platform/mac/fast/repaint/block-selection-gap-stale-cache-2-expected.txt: Added.