@@ -1,0 +1,23 @@
+<html>
+    <head>
+        <style>
+            video { background-color: yellow; width: 320px; height: 240px;}
+        </style>
+    </head>
+    <body>
+
+        <video controls ></video>
+
+        <p>Test HTMLMediaElement <em>canPlayType()</em> method for ogg media containers.</p>
+
+        <script src=video-test.js></script>
+        <script>
+            video = mediaElement = document.getElementsByTagName('video')[0];
+
+            testExpected("video.canPlayType('audio/ogg')", "maybe");
+            testExpected("video.canPlayType('video/ogg')", "maybe");
+
+            endTest();
+        </script>
+    </body>
+</html>
